--- a/Other-Tools.html
+++ b/Other-Tools.html
@@ -524,7 +524,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <p>○&nbsp;<a href="https://www.remove.bg/" rel="nofollow" target="_blank">Remove.bg</a> - <em> Remove image background 100% automatically and free.</a> </p>
 <p>○&nbsp;<a href="https://www.stickermule.com/trace">Trace by Sticker Mule</a> - <em> Remove the background from any image for free.</a> </p>
 <p>○&nbsp;<a href="https://www.visualeyes.design">VisualEyes</a> - <em> Your virtual AI design assistant.</a> </p>
-<p>○&nbsp;<a href="https://upscalepics.com/" rel="nofollow" target="_blank">Upscale Pics</a> - <em> Enhance your images using AI.</a> </p>>
+<p>○&nbsp;<a href="https://upscalepics.com/" rel="nofollow" target="_blank">Upscale Pics</a> - <em> Enhance your images using AI.</a> </p>
 <br>
 </div>
 </div>
@@ -655,7 +655,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
     <p>○&nbsp;<a href="https://www.explainpaper.com/" rel="nofollow" target="_blank">Explainpaper</a> - an AI research assistant</p>
     <p>○&nbsp;<a href="https://typeset.io/" rel="nofollow" target="_blank">SciSpace</a> - AI Copilot to decode any research paper</p>
     
-    >
 <br>
 </div>
 </div>
@@ -700,7 +699,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://codeberg.org/" rel="nofollow" target="_blank">Codeberg</a></p>
         <p>○&nbsp;<a href="https://www.gitea.com/" rel="nofollow" target="_blank">Gitea</a></p>
         <p>○&nbsp;<a href="https://notabug.org/" rel="nofollow" target="_blank">Not A Bug</a></p>
-  >
 <br>
 </div>
 </div>
@@ -743,7 +741,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://rada.re/r/" rel="nofollow" target="_blank">Radare</a> or <a href="https://github.com/rizinorg/cutter" rel="nofollow" target="_blank">Cutter</a> - <em>Reverse Engineering Framework</em> </p>
         <p>○&nbsp;<a href="https://readthedocs.org/" rel="nofollow" target="_blank">Read the Docs</a> - <em>Make Documentation for your Software</em></p>
         <p>○&nbsp;<a href="https://jrsoftware.org/isinfo.php" rel="nofollow" target="_blank">Inno Setup</a> - <em>Windows Program Installer</em></p>
-   >
 <br>
 </div>
 </div>
@@ -788,7 +785,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.electronjs.org/apps/debugtron" rel="nofollow" target="_blank">Debugtron</a> - <em>Electron App Debugger</em></p>
         <p>○&nbsp;<a href="https://github.com/fuzz-security/MobileApp-Pentest-Cheatsheet" rel="nofollow" target="_blank">MobileApp-Pentest-Cheatsheet</a> - <em>Mobile App Penetration Test Index</em></p>
         <p>○&nbsp;<a href="https://pm2.keymetrics.io/" rel="nofollow" target="_blank">PM2</a> - <em>Process Manager</em></p>
-   >
 <br>
 </div>
 </div>
@@ -832,7 +828,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://phaser.io/" rel="nofollow" target="_blank">Phaser</a> - <em>Mobile HTML5 Game Framework</em> </p>
         <p>○&nbsp;<a href="https://playcanvas.com/" rel="nofollow" target="_blank">PlayCanvas</a> - <em>Build HTML5 Visualizations / Games</em> </p>
         <p>○&nbsp;<a href="https://curlie.org/en/Games/Roleplaying/World_Building" rel="nofollow" target="_blank">Curlie World Building</a> - <em>World Building Resource Index</em> </p>
-  >
 <br>
 </div>
 </div>
@@ -899,7 +894,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://addons.mozilla.org/en-US/firefox/addon/markdown-editor-premium/" rel="nofollow" target="_blank">Markdown Editor for Firefox</a> - <em>Markdown Editor Extension</em> </p>
         <p>○&nbsp;<a href="https://markdowntohtml.com/" rel="nofollow" target="_blank">Markdown To HTML</a> - <em>Markdown to HTML Converter</em></p>
         <p>○&nbsp;<a href="https://obsidian.md/" rel="nofollow" target="_blank">Obsidian</a> - <em>Markdown File Organizer</em><br /></p>
-  >
 <br>
 </div>
 </div>
@@ -964,7 +958,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://shields.io/" rel="nofollow" target="_blank">Shields.io</a> - <em>Metadata badges for Github Readmes</em></p>
         <p>○&nbsp;<a href="https://dev.to/mishmanners/how-to-enable-github-actions-on-your-profile-readme-for-a-contribution-graph-4l66" rel="nofollow" target="_blank">GitHub Snake</a> - <em>Enable Snake Game on GitHub ReadMe</em></p>
         <p>○&nbsp;<a href="https://github.com/montylion/discord-md-badge" rel="nofollow" target="_blank">Discord MD Badge</a> - <em>Add Discord Badge to GitHub</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1021,7 +1014,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p><strong>Extensions</strong></p>
             <p><a href="https://chrome.google.com/webstore/detail/seo-minion/giihipjfimkajhlcilipnjeohabimjhi?utm_source=chrome-ntp-icon" rel="nofollow" target="_blank">SEO Minion</a> or <a href="https://chrome.google.com/webstore/detail/ubersuggest-seo-and-keywo/nmpgaoofmjlimabncmnmnopjabbflegf" rel="nofollow" target="_blank">ubersuggest</a></p>
         </p>
->
 <br>
 </div>
 </div>
@@ -1062,7 +1054,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://gitlab.com/gokhanettin/wnix" rel="nofollow" target="_blank">WNIX</a> - <em>UNIX-like Windows Development Environment</em></p>
         <p>○&nbsp;<a href="https://sift-tool.org/" rel="nofollow" target="_blank">Sift</a> - <em>grep Alternative</em></p>
         <p>○&nbsp;<a href="http://edbrowse.org/" rel="nofollow" target="_blank">Edbrowse</a> - <em>Command Line Editor / Browser / Mail Client</em></p>
-    >
 <br>
 </div>
 </div>
@@ -1107,7 +1098,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://yash.osdn.jp/" rel="nofollow" target="_blank">yash</a></p>
         <p>○&nbsp;<a href="https://xon.sh/" rel="nofollow" target="_blank">xonsh</a></p>
         <p>○&nbsp;<a href="https://github.com/nushell/nushell" rel="nofollow" target="_blank">nushell</a></p>
- >
 <br>
 </div>
 </div>
@@ -1152,7 +1142,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://github.com/joowani/colorpediahttps://coolors.co/" rel="nofollow" target="_blank">Colorpedia</a> - <em>Lookup Colors &amp; Palettes via Command-Line</em> </p>
         <p>○&nbsp;<a href="https://www.shadertoy.com/browse" rel="nofollow" target="_blank">ShaderToy</a> - <em>User-Made Shaders</em> </p>
         <p>○&nbsp;<a href="https://webaim.org/resources/contrastchecker/" rel="nofollow" target="_blank">Contrast Checker</a> - <em>Background / Text Contrast Checker</em></p>
-   >
 <br>
 </div>
 </div>
