--- a/Productivity-tools.html
+++ b/Productivity-tools.html
@@ -251,7 +251,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <p>○&nbsp;<a href="https://workflowy.com/"  rel="nofollow" target="_blank">WorkFlowy</a> - Outlining application for nested bulleted lists.</p>
                 <p>○&nbsp;<a href="https://obie.ai/"  rel="nofollow" target="_blank">Obie.ai</a> - AI platform that brings all knowledge and documentation into one spot.</p>
                 <p>○&nbsp;<a href="https://obsidian.md/"  rel="nofollow" target="_blank">Obsidian.md</a> - A knowledge base tool that works on local Markdown files. It allows you to create links between different notes.</p>
-           >
 <br>
 </div>
 </div>
@@ -309,7 +308,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <p>○&nbsp;<a href="https://trello.com">Trello</a> - Kanban method task board.</p>
                 <p>○&nbsp;<a href="https://tweek.so">Tweek</a> - Super Simple To Do list and Weekly Task Management.</p>
                 <p>○&nbsp;<a href="https://www.vivifyscrum.com">VivifyScrum</a> - Agile project management app for teams that deliver. Customizable Scrum and Kanban boards.</p>
-         >
 <br>
 </div>
 </div>
@@ -351,7 +349,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <p>○&nbsp;<a href="http://www.habitbull.com/">HabitBull</a> - Premium habit tracker.</p>
                 <p>○&nbsp;<a href="https://github.com/iSoron/uhabits">Loop Habit Tracker</a> - An Android app for creating and maintaining good habits.</p>
                 <p>○&nbsp;<a href="https://wakatime.com/">Waka Time</a> - Open source plugin for knowing exactly how long you spend coding.</p>
-            >
 <br>
 </div>
 </div>
@@ -394,7 +391,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <p>○&nbsp;<a href="https://nextcloud.com">Nextcloud</a> - The self-hosted productivity platform that keeps you in control.</p>
                 <p>○&nbsp;<a href="https://onedrive.live.com">OneDrive</a> - Best cloud storage solution for Windows users.</p>
                 <p>○&nbsp;<a href="https://www.pcloud.com/">pCloud</a> - A cloud storage solution with a strong focus on security.</p>
-           >
 <br>
 </div>
 </div>
@@ -432,7 +428,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="col-1">
 <div id="wb_Text36" <p>○&nbsp;<a href="https://bitwarden.com">Bitwarden</a> - A free, trusted password manager that can store, sync, and generate passwords online or through native apps.</p>
                 <p>○&nbsp;<a href="https://lastpass.com">LastPass</a> - A freemium password manager that stores encrypted passwords online.</p>
-           >
 <br>
 </div>
 </div>
@@ -473,7 +468,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <p>○&nbsp;<a href="https://www.mindmeister.com/"><strong>MindMeister</strong></a> [Multi-platform / <em>Freemium</em>] - Online and collaboration-focused brainstorming software;</p>
                 <p>○&nbsp;<a href="http://www.mindlyapp.com/"><strong>Mindly</strong></a> [Mobile / <em>Freemium</em>] - On-the-go app to organize your inner universe;</p>
                 <p>○&nbsp;<a href="https://www.thebrain.com/"><strong>TheBrain</strong></a> [Multi-platform / <em>Freemium</em>] - Software for intelligent and creative note-taking</p>
-           >
 <br>
 </div>
 </div>
@@ -509,7 +503,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid41">
 <div class="row">
 <div class="col-1">
-<div id="wb_Text32" <p>○&nbsp;<a href="https://getsharex.com/">ShareX</a> - Screen capture, file sharing and productivity tool.</p>>
+<div id="wb_Text32" <p>○&nbsp;<a href="https://getsharex.com/">ShareX</a> - Screen capture, file sharing and productivity tool.</p>
 <br>
 </div>
 </div>
@@ -558,7 +552,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <p>○&nbsp;<a href="https://doist.com/blog/dont-break-the-chain/">Don’t Break the Chain</a> - Want to adopt new daily habits.</p>
                 <p>○&nbsp;<a href="https://jamesclear.com/eisenhower-box">Eisenhower Matrix</a> - Like graphs, have trouble seeing things in black-and-white, and would rather prioritize on a continuum than stuff tasks into a few categories.</p>
                 <p>○&nbsp;<a href="https://www.lifehack.org/articles/productivity/productivity-system-overview-getting-results-the-agile-way.html">Agile Results</a> - Are goal-oriented and/or are tackling complex projects and need to keep to a timeline.</p>
-          >
+	
 <br>
 </div>
 </div>
@@ -597,7 +591,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_Text39" <p>○&nbsp;<a href="https://www.goodreads.com/book/show/25744928-deep-work" rel="nofollow" target="_blank">Deep Work by Cal Newport</a> - <em>Deep work is the ability to focus without distraction on a cognitively demanding task.</em></p>
                 <p>○&nbsp;<a href="https://www.goodreads.com/book/show/1633.Getting_Things_Done" rel="nofollow" target="_blank">Getting Things Done by David Allen</a> - <em>A very simple and efficient time-management method.</em></p>
                 <p>○&nbsp;<a href="https://www.goodreads.com/book/show/22716195-the-5-choices" rel="nofollow" target="_blank">The 5 Choices by Kory Kogon</a> = <em>An all around productivity methodology dealing with prioritization, scheduling, technology and energy management.</em></p>
-           >
+
 <br>
 </div>
 </div>
@@ -636,7 +630,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="wb_Text8"  <p>○&nbsp;<a href="https://workspace.google.com/products/calendar/" rel="nofollow" target="_blank">Google Calendar</a> </p>
                 <p>○&nbsp;<a href="https://www.microsoft.com/en-us/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook?deeplink=%2fowa%2f0%2f%3fstate%3d1%26redirectTo%3daHR0cHM6Ly9vdXRsb29rLmxpdmUuY29tL2NhbGVuZGFyLzAvdmlldy9tb250aC8&sdf=0" rel="nofollow" target="_blank">Outlook Calendar</a> - <em>for Windows users.</em></p>
                 <p>○&nbsp;<a href="https://www.appgenix-software.com/" rel="nofollow" target="_blank">Business Calendar 2</a> = <em>An all around productivity methodology dealing with prioritization, scheduling, technology and energy management.</em></p>
-                <p>○&nbsp;<a href="https://www.any.do/calendar/" rel="nofollow" target="_blank">Any.do</a> </p>>
+                <p>○&nbsp;<a href="https://www.any.do/calendar/" rel="nofollow" target="_blank">Any.do</a> </p>
 <br>
 </div>
 </div>
@@ -674,7 +668,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="col-1">
 <div id="wb_Text9" <p>○&nbsp;<a href="https://www.helpscout.com/" rel="nofollow" target="_blank">Help Scout</a> </p>
             <p>○&nbsp;<a href="https://missiveapp.com/" rel="nofollow" target="_blank">Missive</a> </p>
-            <p>○&nbsp;<a href="https://www.brevo.com/" rel="nofollow" target="_blank">Brevo</a> </p>>
+            <p>○&nbsp;<a href="https://www.brevo.com/" rel="nofollow" target="_blank">Brevo</a> </p>
 <br>
 </div>
 </div>
@@ -741,7 +735,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://addons.mozilla.org/en-US/firefox/addon/markdown-editor-premium/" rel="nofollow" target="_blank">Markdown Editor for Firefox</a> - <em>Markdown Editor Extension</em> </p>
         <p>○&nbsp;<a href="https://markdowntohtml.com/" rel="nofollow" target="_blank">Markdown To HTML</a> - <em>Markdown to HTML Converter</em></p>
         <p>○&nbsp;<a href="https://obsidian.md/" rel="nofollow" target="_blank">Obsidian</a> - <em>Markdown File Organizer</em><br /></p>
-  >
 <br>
 </div>
 </div>
@@ -806,7 +799,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://shields.io/" rel="nofollow" target="_blank">Shields.io</a> - <em>Metadata badges for Github Readmes</em></p>
         <p>○&nbsp;<a href="https://dev.to/mishmanners/how-to-enable-github-actions-on-your-profile-readme-for-a-contribution-graph-4l66" rel="nofollow" target="_blank">GitHub Snake</a> - <em>Enable Snake Game on GitHub ReadMe</em></p>
         <p>○&nbsp;<a href="https://github.com/montylion/discord-md-badge" rel="nofollow" target="_blank">Discord MD Badge</a> - <em>Add Discord Badge to GitHub</em></p>
-   >
 <br>
 </div>
 </div>
@@ -863,7 +855,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p><strong>Extensions</strong></p>
             <p><a href="https://chrome.google.com/webstore/detail/seo-minion/giihipjfimkajhlcilipnjeohabimjhi?utm_source=chrome-ntp-icon" rel="nofollow" target="_blank">SEO Minion</a> or <a href="https://chrome.google.com/webstore/detail/ubersuggest-seo-and-keywo/nmpgaoofmjlimabncmnmnopjabbflegf" rel="nofollow" target="_blank">ubersuggest</a></p>
         </p>
->
 <br>
 </div>
 </div>
@@ -908,7 +899,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://yash.osdn.jp/" rel="nofollow" target="_blank">yash</a></p>
         <p>○&nbsp;<a href="https://xon.sh/" rel="nofollow" target="_blank">xonsh</a></p>
         <p>○&nbsp;<a href="https://github.com/nushell/nushell" rel="nofollow" target="_blank">nushell</a></p>
- >
 <br>
 </div>
 </div>
@@ -960,7 +950,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://www.europeana.eu/en/collections/topic/18-newspapers" rel="nofollow" target="_blank">Europeana Newspapers</a> - <em>European Historical Newspapers</em></p>
             <p>○&nbsp;<a href="https://github.com/king-millez/abc-dl" rel="nofollow" target="_blank">abc-dl</a> - <em>Australian Broadcasting Corporation News Archive</em></p>
             <p>○&nbsp;<a href="https://newspapermap.com/" rel="nofollow" target="_blank">Newspaper Map</a> - <em>Find / Translate Worldwide Newspapers</em></p>
-   >
 <br>
 </div>
 </div>
@@ -1059,7 +1048,6 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://docdownloader.com/" rel="nofollow" target="_blank">DocDownloader</a> - <em><a href="https://www.scribd.com/" rel="nofollow" target="_blank">Scribd</a> Document Downloader</em> </p>
             <p>○&nbsp;<a href="https://zealdocs.org/" rel="nofollow" target="_blank">ZealDocs</a> - <em>Documentation Reader</em></p>
             <p>○&nbsp;<a href="https://github.com/kermitt2/grobid" rel="nofollow" target="_blank">GROBID</a> - <em>Extract / Organize Scientific Document Info</em></p>
-       >
 <br>
 </div>
 </div>
