--- a/Social-Media-Tools.html
+++ b/Social-Media-Tools.html
@@ -296,7 +296,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                 <p>○&nbsp;<a href="https://openuserjs.org/scripts/darkred/Instagram_-_visible_images_counter" rel="nofollow"
                         target="_blank">Image Counter</a> - <em>Count images on a page</em> </p>
                 <p>○&nbsp;<a href="https://github.com/gulzar1996/" rel="nofollow"
-                        target="_blank">auto-like-my-gf-insta-pic</a> - <em>Auto-Like Pictures</em> </p>>
+                        target="_blank">auto-like-my-gf-insta-pic</a> - <em>Auto-Like Pictures</em> </p>
 <br>
 </div>
 </div>
@@ -397,7 +397,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
                         <p>○&nbsp;<a href="https://cheapbotsdonequick.com/" rel="nofollow" target="_blank">Cheap Bots, Done Quick</a> - <em>Create Twitter Bots</em></p>
                         <p>○&nbsp;<a href="https://botometer.osome.iu.edu/" rel="nofollow" target="_blank">Botometer</a> or <a href="https://osome.iu.edu/tools/botslayer" rel="nofollow" target="_blank">BotSlayer</a> - <em>Twitter Bot Check</em></p>
                         <p>○&nbsp;<a href="https://blackmagic.so/" rel="nofollow" target="_blank">BlackMagic</a> - <em>Twitter Growth Tool</em></p>
-               >
+
 <br>
 </div>
 </div>
@@ -554,7 +554,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <h6>🧰Miscellaneous</h6>
 
     
-        <p>○&nbsp;<strong>Video avatar properties</strong> - 800x800px, up to 2 MB.</p>>
+        <p>○&nbsp;<strong>Video avatar properties</strong> - 800x800px, up to 2 MB.</p>
 <br>
 </div>
 </div>
@@ -599,7 +599,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://github.com/joowani/colorpediahttps://coolors.co/" rel="nofollow" target="_blank">Colorpedia</a> - <em>Lookup Colors &amp; Palettes via Command-Line</em> </p>
         <p>○&nbsp;<a href="https://www.shadertoy.com/browse" rel="nofollow" target="_blank">ShaderToy</a> - <em>User-Made Shaders</em> </p>
         <p>○&nbsp;<a href="https://webaim.org/resources/contrastchecker/" rel="nofollow" target="_blank">Contrast Checker</a> - <em>Background / Text Contrast Checker</em></p>
-   >
+
 <br>
 </div>
 </div>
@@ -678,7 +678,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://jsonformatter.curiousconcept.com/" rel="nofollow" target="_blank">JSON Formatter</a> or <a href="https://github.com/callumlocke/json-formatter" rel="nofollow" target="_blank">json-formatter</a> - <em>JSON Formatter</em> </p>
         <p>○&nbsp;<a href="https://glogg.bonnefon.org/" rel="nofollow" target="_blank">glogg</a> - <em>Log File Explorer</em></p>
         <p>○&nbsp;<a href="https://carbon.now.sh/" rel="nofollow" target="_blank">Carbon</a> - <em>Source Code Screenshots</em></p>
-   >
+
 <br>
 </div>
 </div>
@@ -757,7 +757,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <a href="https://jsfiddle.net/" rel="nofollow" target="_blank">JSFiddle</a>, 
             <a href="https://playcode.io/" rel="nofollow" target="_blank">PlayCode</a> </p>
         </p>
-   >
+
 <br>
 </div>
 </div>
@@ -808,7 +808,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://codepen.io/" rel="nofollow" target="_blank">CodePen</a> - <em>Code Sandbox</em> </p>
         <p>○&nbsp;<a href="https://tio.run/" rel="nofollow" target="_blank">tio.run</a> - <em>Programming Language Interpreters</em> </p>
         <p>○&nbsp;<a href="https://www.onlinegdb.com/online_python_compiler" rel="nofollow" target="_blank">Online Python Compiler</a> - <em>Online Python Editor &amp; Tester</em></p>
-   >
+
 <br>
 </div>
 </div>
@@ -856,7 +856,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://www.jojo-themes.net/" rel="nofollow" target="_blank">jojo-themes</a></p>
         <p>○&nbsp;<a href="https://babiato.co/" rel="nofollow" target="_blank">babiato</a></p>
         <p>○&nbsp;<a href="https://newtemplate.net/" rel="nofollow" target="_blank">newtemplate</a></p>
-   >
+
 <br>
 </div>
 </div>
@@ -903,7 +903,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
         <p>○&nbsp;<a href="https://deviceframes.com" rel="nofollow" target="_blank">Deviceframes</a></p>
         <p>○&nbsp;<a href="https://angle.sh" rel="nofollow" target="_blank">Angle</a></p>
         <p>○&nbsp;<a href="https://animockup.com" rel="nofollow" target="_blank">Animockup</a></p>
->
+
 <br>
 </div>
 </div>
@@ -955,7 +955,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://www.europeana.eu/en/collections/topic/18-newspapers" rel="nofollow" target="_blank">Europeana Newspapers</a> - <em>European Historical Newspapers</em></p>
             <p>○&nbsp;<a href="https://github.com/king-millez/abc-dl" rel="nofollow" target="_blank">abc-dl</a> - <em>Australian Broadcasting Corporation News Archive</em></p>
             <p>○&nbsp;<a href="https://newspapermap.com/" rel="nofollow" target="_blank">Newspaper Map</a> - <em>Find / Translate Worldwide Newspapers</em></p>
-   >
+
 <br>
 </div>
 </div>
@@ -1054,7 +1054,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
             <p>○&nbsp;<a href="https://docdownloader.com/" rel="nofollow" target="_blank">DocDownloader</a> - <em><a href="https://www.scribd.com/" rel="nofollow" target="_blank">Scribd</a> Document Downloader</em> </p>
             <p>○&nbsp;<a href="https://zealdocs.org/" rel="nofollow" target="_blank">ZealDocs</a> - <em>Documentation Reader</em></p>
             <p>○&nbsp;<a href="https://github.com/kermitt2/grobid" rel="nofollow" target="_blank">GROBID</a> - <em>Extract / Organize Scientific Document Info</em></p>
-       >
+
 <br>
 </div>
 </div>
