--- a/media.html
+++ b/media.html
@@ -417,6 +417,33 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 </div>
+
+<div id="wb_LayoutGrid7">
+    <div id="LayoutGrid7">
+    <div class="row">
+    <div class="col-1">
+    </div>
+    </div>
+    </div>
+    </div>
+<div id="wb_LayoutGrid65">
+    <div id="LayoutGrid65">
+    <div class="row">
+    <div class="col-1">
+    <div id="wb_Image9" style="display:inline-block;width:100%;height:auto;z-index:37;">
+    <a href="https://drive.google.com/drive/folders/12VSoLZNW-Fo0d9yAWSSXoaYN2RapIqdI?usp=sharing"><img src="images/Artboard 521x530@1200x630.png" id="Image9" alt="" title="2023" width="890" height="549"></a>
+    </div>
+    <div id="wb_Text16">
+    <p>2024</p>
+    </div>
+    <div id="wb_Text17">
+    <p><a href="https://drive.google.com/drive/folders/12VSoLZNW-Fo0d9yAWSSXoaYN2RapIqdI?usp=sharing">Click here </a>to see full Album</p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+
 <div id="wb_LayoutGrid7">
 <div id="LayoutGrid7">
 <div class="row">
