--- a/Lists.html
+++ b/Lists.html
@@ -591,7 +591,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 <div class="col-2">
 <div id="wb_Heading21" style="display:inline-block;width:100%;z-index:194;">
-<h2 id="Heading21">सदस्यता योजना </h2>
+<h2 id="Heading21"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTf1r-vM49JBTOnlK1PZkei4NeSNDJwRMDzTNwXlKPszuukl9h8_QKPw_-nRf6Mie_UiEe-KU--CsZv/pubhtml">सदस्यता योजना</a> </h2>
 </div>
 </div>
 <div class="col-3">
@@ -730,7 +730,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 <div class="col-2">
 <div id="wb_Heading22" style="display:inline-block;width:100%;z-index:253;">
-<h2 id="Heading22">दान प्रार्थना योजना </h2>
+<h2 id="Heading22"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ49Zvkjnz4ZkaoTLaBZXEsuZ46sFeD92r4pN81rf6Vb1nSt-ToUDC3ivztOw44AqUK3HrMXfrikUgr/pubhtml"> दान प्रार्थना योजना </a></h2>
 </div>
 </div>
 <div class="col-3">
@@ -831,7 +831,8 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 <div class="col-2">
 <div id="wb_Heading35" style="display:inline-block;width:100%;z-index:294;">
-<h2 id="Heading35">विशिष्ट योजना </h2>
+<h2 id="Heading35"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRCN638C8UcgkvB_zBz7YV4-PVLmm1hdsJMgR17u005e5MHxqp73Zd7D-732lx05ChCzKheLyeVKqUt/pubhtml"> 
+विशिष्ट योजना </a> </h2>
 </div>
 </div>
 <div class="col-3">
@@ -1082,6 +1083,28 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 </div>
+
+<div id="wb_LayoutGrid100">
+<div id="LayoutGrid100">
+<div class="row">
+<div class="col-1">
+<div id="wb_LayoutGrid45">
+<div id="LayoutGrid45">
+<div class="row">
+<div class="col-1">
+<div id="wb_Heading40" style="display:inline-block;width:100%;z-index:387;">
+<h2 id="Heading23"><a href="https://docs.google.com/forms/d/e/1FAIpQLScBFfzaQJn97GrNQJcNwVkt8wLbXQ1Uyswg4wUZ1xdnVu7qog/viewform">Become a Member/Donar (Google Form)</a></h2>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+	
 <div id="wb_LayoutGrid28">
 <div id="LayoutGrid28-overlay"></div>
 <div id="LayoutGrid28">
